--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment solution for module 2</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
@@ -35,7 +36,7 @@
 		        	</div>
 			    </section>
 		    </div>
-		    
+
 		</div>
 		
 </body>
