the final touch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="row">
 			<div id = "con" class="col-lg-3 col-md-2">
 			    <section>
-				    <div class="title" style="background-color: #ED92A2">Chicken</div>
+				    <div class="title" id="one">Chicken</div>
 				    <div class="hola">
 				        Chickens are gregarious birds and live together in flocks. They have a communal approach to the incubation of eggs and raising of young.The average chicken may live for five to ten years.
 			        </div>
@@ -22,7 +22,7 @@
 
 			<div id = "con" class="col-lg-3 col-md-2">
 			    <section>
-				    <div class="title" style="background-color: #CE3337">Beef</div>
+				    <div class="title" id="two">Beef</div>
 				    <div class="hola">Most beef skeletal muscle meat can be used as is by merely cutting into certain parts, such as roasts, short ribs or steak (filet mignon, sirloin steak, rump steak, rib steak, rib eye steak, hanger steak, etc.), while other cuts are processed (corned beef or beef jerky).
 				    </div>
 			    </section>
@@ -30,7 +30,7 @@
 
 		    <div  id = "con" class="col-lg-3 col-sm">
 			    <section>
-				    <div class="title" style="background-color: #E3BE66">Suhi</div>
+				    <div class="title" id="three">Suhi</div>
 				    <div class="hola">
 				    Sushi is sometimes confused with sashimi, a related dish in Japanese cuisine that consists of thinly sliced raw fish, or occasionally meat, and an optional serving of rice.Sushi originates in a Southeast Asian dish.
 		        	</div>
