--- a/module-3/index.html
+++ b/module-3/index.html
@@ -15,7 +15,7 @@
 
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
-			<div class="container">
+			<div class="col-xs-12">
 					
 				<div class="navbar-header">
 
