--- a/module-3/index.html
+++ b/module-3/index.html
@@ -15,7 +15,7 @@
 
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
-			<div class="col-xs-12">
+			<div class="container">
 					
 				<div class="navbar-header">
 
@@ -64,7 +64,7 @@
 	</header>
 
 				<div class='container-fluid' id="main-content">
-					<div class="wraper">
+					<div class="col-xs-12" id="wraper">
 					<h1 class="text-center" id="menu">
 						Our Menu 
 					</h1>
